--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
+    "placeholder-loading": "^0.2.6",
     "react": "^18.2.0",
     "react-bootstrap": "^1.4.0",
+    "react-confirm-alert": "^2.6.2",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.3.1",
     "react-thunk": "^1.0.0",
+    "react-toastify": "^6.1.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "validator": "^13.1.17",
